tootlip - The tooltip containing spaces does not get truncated - FIXED

--- a/sdnnt/src/main/ui/src/sass/_app-global.scss
+++ b/sdnnt/src/main/ui/src/sass/_app-global.scss
@@ -399,6 +399,11 @@ table {
 // tooltip
 .mat-tooltip  {
   white-space: pre-line !important;
+
+  &.app-ean {
+    word-break: break-all !important;
+    white-space: normal !important;
+  }
 }
 
 // mat form field
